<resources>
    <string name="app_name">TouTiaoDemo</string>
    <string name="home_btn">首页</string>
    <string name="video_btn">西瓜视频</string>
    <string name="toutiao_btn">微头条</string>
    <string name="unlogin_btn">未登录</string>
    <string name="login_btn">我的</string>

    <string name="my_channel">我的频道</string>
    <string name="enter_my_channel">点击进入频道</string>
    <string name="edit">编辑</string>
    <string name="hint_edittext">&#160;&#160;驾照扣12分</string>

    <integer name="grid_pos">100</integer>
</resources>
