<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginEnd="@dimen/activity_margin_left"
              android:layout_marginStart="@dimen/activity_margin_right"
              android:orientation="vertical">

    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/close_icon"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/my_channel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_channel"
            android:textColor="@color/font_black"
            android:textSize="@dimen/font_16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/my_channel_text"
            android:text="@string/enter_my_channel"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/font_small"/>

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/edit_btn_background"
            android:text="@string/edit"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_16sp"/>
    </RelativeLayout>

    <com.heyzqt.toutiaodemo.widget.ChannelGridView
        android:id="@+id/my_channel_gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:horizontalSpacing="8dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"/>
</LinearLayout>